--- a/source/index.html
+++ b/source/index.html
@@ -152,13 +152,23 @@
 <!--              </p>-->
 <!--            </blockquote>-->
           </div>
-          <button class="reviews__prev-button"><span class="visually-hidden">Предыдущий отзыв</span></button>
+          <button class="reviews__prev-button">
+            <span class="visually-hidden">Предыдущий отзыв</span>
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+              <path d="M2.045,20.859L21.458,1.446c0.331-0.331,0.331-0.867,0-1.198c-0.33-0.331-0.867-0.331-1.197,0L0.248,20.261 c-0.331,0.33-0.331,0.867,0,1.197l20.013,20.013c0.164,0.165,0.382,0.248,0.599,0.248s0.434-0.083,0.599-0.248 c0.331-0.331,0.331-0.867,0-1.198L2.045,20.859z"/>
+            </svg>
+          </button>
           <div class="reviews__toggles-list">
             <button class="reviews__toggle reviews__toggle--active" type="button"></button>
             <button class="reviews__toggle" type="button"></button>
             <button class="reviews__toggle" type="button"></button>
           </div>
-          <button class="reviews__next-button"><span class="visually-hidden">Следующий отзыв</span></button>
+          <button class="reviews__next-button">
+            <span class="visually-hidden">Следующий отзыв</span>
+            <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="21.706px" height="41.719px" viewBox="0 0 21.706 41.719" enable-background="new 0 0 21.706 41.719" xml:space="preserve">
+              <path d="M19.661,20.859L0.248,1.446c-0.331-0.331-0.331-0.867,0-1.198c0.33-0.331,0.867-0.331,1.197,0l20.013,20.012 c0.33,0.33,0.33,0.867,0,1.197L1.445,41.471c-0.164,0.165-0.382,0.248-0.599,0.248s-0.434-0.083-0.599-0.248 c-0.331-0.331-0.331-0.867,0-1.198L19.661,20.859z"/>
+            </svg>
+          </button>
         </div>
       </section>
 
