--- a/source/form.html
+++ b/source/form.html
@@ -206,6 +206,19 @@
         </div>
       </div>
     </footer>
+
+    <section class="modal modal--error">
+      <h2 class="modal__title">Что-то пошло не так!</h2>
+      <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+      <button class="modal__button button button--green">Ок</button>
+    </section>
+
+    <section class="modal modal--success">
+      <h2 class="modal__title">Ваша заявка отправлена</h2>
+      <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим вас.</p>
+      <button class="modal__button button button--green">Закрыть окно</button>
+    </section>
   </body>
   <script src="js/main.js"></script>
+  <script src="js/modal.js"></script>
 </html>
