добавляет webp изображения

--- a/source/index.html
+++ b/source/index.html
@@ -216,6 +216,8 @@
           <ul class="features__list list">
             <li class="features__item">
               <picture class="features__picture">
+                <source type="image/webp" srcset="img/iphone-screen-1-desktop@1x.webp 1x, img/iphone-screen-1-desktop@2x.webp 2x">
+
                 <img src="img/iphone-screen-1-desktop@1x.png" srcset="img/iphone-screen-1-desktop@2x.png 2x" width="292" height="302" alt="Черно-белая фотография мусорных баков на Айфоне">
               </picture>
               <h3 class="features__title">Поднимает настроение</h3>
@@ -223,6 +225,8 @@
             </li>
             <li class="features__item">
               <picture class="features__picture">
+                <source type="image/webp" srcset="img/iphone-screen-2-desktop@1x.webp 1x, img/iphone-screen-2-desktop@2x.webp 2x">
+
                 <img src="img/iphone-screen-2-desktop@1x.png" srcset="img/iphone-screen-2-desktop@2x.png 2x" width="292" height="302" alt="Фотография мусорных баков через розовый фильтр на Айфоне">
               </picture>
               <h3 class="features__title">Меняет мир вокруг</h3>
@@ -230,6 +234,10 @@
             </li>
             <li class="features__item">
               <picture class="features__picture">
+                <source type="image/webp" media="(min-width: 960px)" srcset="img/iphone-screen-3-desktop@1x.webp 1x, img/iphone-screen-3-desktop@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 660px)" srcset="img/iphone-screen-3-tablet@1x.webp 1x, img/iphone-screen-3-tablet@2x.webp 2x">
+                <source type="image/webp" srcset="img/iphone-screen-mobile@1x.webp 1x, img/iphone-screen-mobile@2x.webp 2x">
+
                 <source media="(min-width: 960px)" srcset="img/iphone-screen-3-desktop@1x.png 1x, img/iphone-screen-3-desktop@2x.png 2x">
                 <source media="(min-width: 660px)" srcset="img/iphone-screen-3-tablet@1x.png 1x, img/iphone-screen-3-tablet@2x.png 2x">
                 <img src="img/iphone-screen-mobile@1x.png" srcset="img/iphone-screen-mobile@2x.png 2x" width="157" height="320" alt="Фотография мусорных баков через розовый фильтр с приветствием на Айфоне">
@@ -404,13 +412,6 @@
           </div>
         </div>
         <iframe class="contacts__map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.60362530032!2d30.320858716231182!3d59.938719169054025!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1579479100648!5m2!1sru!2sru"  frameborder="0" style="border: none;" allowfullscreen=""></iframe>
-        <!--        <a class="contacts__map" href="#">-->
-<!--          <picture class="contacts__map-image">-->
-<!--            <source media="(min-width: 960px)" srcset="img/bg-map-desktop@1x.jpg 1x, img/bg-map-desktop@2x.jpg 2x">-->
-<!--            <source media="(min-width: 660px)" srcset="img/bg-map-tablet@1x.jpg 1x, img/bg-map-tablet@2x.jpg 2x">-->
-<!--            <img src="img/bg-map-mobile@1x.png" srcset="img/bg-map-desktop@2x.jpg 2x" width="320" height="645" alt="Наш офис находится на ул. Большая Конюшенная, 19/8">-->
-<!--          </picture>-->
-<!--        </a>-->
       </section>
     </main>
 
